--- a/coloring/static/coloring/css/new_interaction.css
+++ b/coloring/static/coloring/css/new_interaction.css
@@ -19,12 +19,15 @@ html, body {
     object-fit: scale-down;
 }
 
+#palette_box {
+    background-color: black;
+    width:40%;
+}
+
 #color-palette {
-    width: 300px;
-    background-color: #f1f1f1;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
     top: 0;
 }
 
@@ -33,7 +36,6 @@ html, body {
     background-color: #f1f1f1;
     display: flex;
     flex-wrap: wrap;
-    position: absolute;
     top: 400px;
 }
 
@@ -52,7 +54,7 @@ html, body {
     width:99px;
     top: 30%;
     left: 0%;
-    background-color: white; 
+    background-color: #f1f1f1;
 }
 
 
@@ -66,6 +68,7 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #f1f1f1;
 }
 
 #bottom_ui {
@@ -78,6 +81,7 @@ html, body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #f1f1f1;
 }
 
 #drag_icon {
@@ -88,30 +92,6 @@ html, body {
     padding-top:0;
 }
 
-#undo {
-
-}
-
-#redo {
-
-}
-
-#grid {
-
-}
-
-#rotate-left {
-
-}
-
-#rotate-right {
-
-}
-
-#trash {
-
-}
-
 #trash_text {
     position: absolute;
     top: 20%;
@@ -120,58 +100,18 @@ html, body {
     width: 20%;
 }
 
-#pencil {
-    
-}
-
-#erase {
-
-}
-
-#fill {
-
-}
-
-#palette {
-
-}
-
-#hand {
-
-}
-
-#zoom {
-
-}
-
-
 /* Classes */
-.can_drag {
-    
-}
-
 .qs_ui {
     text-align: center;
     border:1px solid black;
 }
 
-
 .top_ui_tool {
     font-size: 60px;
-    
-    /* temp 
-    outline-width: 1px;
-    outline-color: black;
-    outline-style: solid; */
 }
 
 .bottom_ui_tool {
     font-size: 70px;
-
-    /* temp 
-    outline-width: 5px;
-    outline-color: black;
-    outline-style: solid; */
 }
 
 .ui_tool_margin {
@@ -183,4 +123,3 @@ html, body {
     height:30px;
     width:99px;
 }
-
