--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -59,7 +59,7 @@
 
 	<div id="drag_ui" style="border:3px solid black;"> 
 		<div class="qs_ui" id="drag_icon"> <i style="height:30px;width:99px;" class="bi bi-grip-horizontal" ></i> </div>
-		<div class="qs_ui" id="drag_info" style="font-size:10px;height:38px;background-color:skyblue"> Drag pencil, eraser, or bucket here to save to use</div>
+		<div class="qs_ui" id="drag_info" style="font-size:10px;height:38px;background-color:skyblue"> Drag pencil, eraser, or bucket here and click to use</div>
 		<div class="qs_ui" id="qs_tools" style="height:40px;"> </div>
 		<div class="qs_ui" id="collaspe" style="height:20px;"> <i class="bi bi-chevron-compact-up"></i> </div>
 		<div class="qs_ui" id="expand" style="height:20px;"> <i class="bi bi-chevron-compact-down"></i> </div>
@@ -282,7 +282,7 @@
 		if (trash_mode === true) {
 			trash_mode = false;
 			document.getElementById('trash').style.outline = "none";
-			info.innerHTML = 'Drag pencil, eraser, or bucket here to save to use';
+			info.innerHTML = 'Drag pencil, eraser, or bucket here and click to use';
 			info.style.backgroundColor = 'skyblue';
 			return trash_mode;
 		} else {
